src/tests/code/fail/fail_int_literal_hex.u
entrypoint: ~()->(iErrorCode:~i64{1})
{
	iErrorCode :=	0xFG;	// Character G is invalid in a hexadecimal integer.
}
